PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2006-01-06: - If two spots were adjusted simultaneously, parameter values
              were updated to erroneous fields (the last occurence of the
              spot parameter was updated to *all* spot fields). Fixed.
              Many thanks to Ron Kaitchuck for pointing this out!
2006-01-03: - Stale debugging printout was removed from the terminal.
2005-12-31: - Well, I got two bug reports today, do you expect me to stand
              still and do nothing about it? Don't worry, the party begins
              at 18h and I won't be late! :)
            - The double-contact morphology constraint turned the adjustment
              switches for T2, A2 and GR2 on accidentally. Fixed.
            - MERRY CHRISTMAS AND A HAPPY NEW YEAR!!!
2005-11-17: - Gravity brightening renamed to gravity darkening.
2005-11-11: - Observations for negative values of dP/dt were not phased
              properly for LC plots. Fixed.
2005-11-10: - A value button that set the number of spots on a secondary
              star was inadvertantly removed, which caused additional
              GTK+ warnings to be printed to the console. Fixed.
            - Dirk Terrell found a serious formatting bug in PHOEBE that
              caused malformed values of gravity darkening coefficients to
              be passed to WD. Fixed.
            - PHOEBE 0.28a released!
2005-11-01: - Critical epochs fully implemented. The program now computes
              the periastron passage phase, phases of superior and inferior
              conjunctions (the positions of minima) and phases of the
              ascending and descending nodes (the positions of maxima).
              This was incorporated on suggestion by Petr Harmanec.
            - Surface tab was a bit overcrowded due to the overwhelming
              space devoted to spots. Fixed.
            - PHOEBE 0.28 released!